虚拟长列表优化版本2

--- a/lib/list-virtualized-one-level/index.html
+++ b/lib/list-virtualized-one-level/index.html
@@ -6,7 +6,7 @@
     <title>virtualized-best</title>
 
 </head>
-<script src="./faker.js"></script>
+<script src="../../faker.js"></script>
 <link href="./app.css" rel="stylesheet" />
 
 <body>
